test/sema/traits/trait_redeclared_with_struct.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

// CHECK: [[# @LINE + 1 ]]:1: error: redeclaration of 'A'
struct A {}

fn main() {}
